--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,8 @@
-/eclipse_lua.zip
-/.metadata
-/CognitiveServicesDemo
-/NodeDemo
-/RemoteSystemsTempFiles
-/Servers
-/Weixin
-
-/taotao-common/.idea
-/taotao-parent/.idea
-/taotao-sso/target
-/taotao-search/target
-/taotao-rest/target
-/taotao-portal/target
-/taotao-order/target
-/taotao-manage/taotao-manage-mapper/target
-/taotao-manage/taotao-manage-pojo/target
-/taotao-manage/taotao-manage-service/target
-/taotao-manage/taotao-manage-web/target
-/taotao-common/target
+/.idea
+/*/target
+/taotao-manage/*/target
+/*/*.iml
+/taotao-sso/*.iml
+/taotao-search/*.iml
+/taotao-rest/*.iml
+/taotao-portal/*.iml
