--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 /taotao-search/*.iml
 /taotao-rest/*.iml
 /taotao-portal/*.iml
+/taotao-manage/taotao-manage-web/*.iml
+/taotao-manage/taotao-manage-service/*.iml
+/taotao-manage/taotao-manage-mapper/*.iml
