添加图片上传功能  对应的ftp的docker还没有弄好

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /taotao-manage/taotao-manage-web/*.iml
 /taotao-manage/taotao-manage-service/*.iml
 /taotao-manage/taotao-manage-mapper/*.iml
+/*.iml
