--- a/taotao-manager/src/main/resources/resource/resource.properties
+++ b/taotao-manager/src/main/resources/resource/resource.properties
@@ -1,14 +1,20 @@
-#FTP相关配置
+#FTP\u76F8\u5173\u914D\u7F6E
+#ftp\u670D\u52A1\u5668\u5730\u5740
 FTP_ADDRESS=192.168.2.11
+#ftp\u670D\u52A1\u5668\u7AEF\u53E3\u53F7
 FTP_PORT=21
+#ftp\u7528\u6237\u540D
 FTP_USERNAME=ftpuser
+#ftp\u5BC6\u7801
 FTP_PASSWORD=ftpuser
+#ftp\u670D\u52A1\u5668\u6839\u8DEF\u5F84
 FTP_BASE_PATH=/images
 
-#图片服务器的相关配置
+#\u56FE\u7247\u670D\u52A1\u5668\u7684\u76F8\u5173\u914D\u7F6E
+#\u56FE\u7247\u670D\u52A1\u5668\u7684\u57FA\u7840url
 IMAGE_BASE_URL=http://192.168.2.11/images
 
 
-# 服务层基础url
+# \u670D\u52A1\u5C42\u57FA\u7840url
 REST_BASE_URL=http://localhost:8081/rest
 REST_CONTENT_SYNC_URL=/cache/sync/content/
