--- a/taotao-manager/src/main/resources/resource/db.properties
+++ b/taotao-manager/src/main/resources/resource/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/taotao?characterEncoding=utf-8
+jdbc.url=jdbc:mysql://42.159.235.37:3317/taotao?characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=1234
+jdbc.password=123456X
