--- a/taotao-rest/pom.xml
+++ b/taotao-rest/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>jsp-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        <!-- Jackson Json处理工具包 -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
 
         <!-- Redis客户端 -->
         <dependency>
