--- a/taotao-portal/src/main/resources/resource/resource.properties
+++ b/taotao-portal/src/main/resources/resource/resource.properties
@@ -1,19 +1,23 @@
-#FTP\u76F8\u5173\u914D\u7F6E
-#ftp\u670D\u52A1\u5668\u5730\u5740
-FTP_ADDRESS=42.159.235.37
-#ftp\u670D\u52A1\u5668\u7AEF\u53E3\u53F7
-FTP_PORT=21
-#ftp\u7528\u6237\u540D
-FTP_USERNAME=ftpuser
-#ftp\u5BC6\u7801
-FTP_PASSWORD=ftpuser
-#ftp\u670D\u52A1\u5668\u6839\u8DEF\u5F84
-FTP_BASE_PATH=/images
-
-#\u56FE\u7247\u670D\u52A1\u5668\u7684\u76F8\u5173\u914D\u7F6E
-IMAGE_BASE_URL=http://42.159.235.37/images
-
-
-# \u670D\u52A1\u5C42\u57FA\u7840url
+# \u670D\u52A1\u5C42\u5C5E\u6027\u5B9A\u4E49
+# \u57FA\u7840URL
 REST_BASE_URL=http://localhost:8081/rest
-REST_CONTENT_SYNC_URL=/cache/sync/content/
+# \u9996\u9875\u5927\u5E7F\u544AURL
+REST_INDEX_AD_URL=/content/list/90
+
+# \u641C\u7D22\u57FA\u7840URL
+SEARCH_BASE_URL=http://localhost:8083/search/query
+
+# \u5546\u54C1\u57FA\u672C\u4FE1\u606FURL
+ITEM_INFO_URL=/item/info/
+# \u5546\u54C1\u63CF\u8FF0\u4FE1\u606FURL
+ITEM_DESC_URL=/item/desc/
+# \u5546\u54C1\u89C4\u683C\u53C2\u6570URL
+ITEM_PARAM_URL=/item/param/
+
+
+# \u5355\u70B9\u767B\u5F55\u7CFB\u7EDF\u7684URL
+SSO_BASE_URL=http://localhost:8084
+# \u6839\u636Etoken\u53D6\u7528\u6237\u4FE1\u606F
+SSO_USER_TOKEN=/user/token/
+# \u5355\u70B9\u767B\u5F55\u7CFB\u7EDF\u767B\u5F55URL
+SSO_PAGE_LOGIN=/page/login
