--- a/taotao-rest/src/main/resources/resource/resource.properties
+++ b/taotao-rest/src/main/resources/resource/resource.properties
@@ -1,19 +1,7 @@
-#FTP\u76F8\u5173\u914D\u7F6E
-#ftp\u670D\u52A1\u5668\u5730\u5740
-FTP_ADDRESS=42.159.235.37
-#ftp\u670D\u52A1\u5668\u7AEF\u53E3\u53F7
-FTP_PORT=21
-#ftp\u7528\u6237\u540D
-FTP_USERNAME=ftpuser
-#ftp\u5BC6\u7801
-FTP_PASSWORD=ftpuser
-#ftp\u670D\u52A1\u5668\u6839\u8DEF\u5F84
-FTP_BASE_PATH=/images
+# \u9996\u9875\u5185\u5BB9\u4FE1\u606F\u5728redis\u4E2D\u4FDD\u5B58\u7684key
+INDEX_CONTENT_REDIS_KEY=INDEX_CONTENT_REDIS_KEY
 
-#\u56FE\u7247\u670D\u52A1\u5668\u7684\u76F8\u5173\u914D\u7F6E
-IMAGE_BASE_URL=http://42.159.235.37/images
-
-
-# \u670D\u52A1\u5C42\u57FA\u7840url
-REST_BASE_URL=http://localhost:8081/rest
-REST_CONTENT_SYNC_URL=/cache/sync/content/
+# \u5546\u54C1\u4FE1\u606F\u5728redis\u4E2D\u4FDD\u5B58\u7684key  \u603B\u7684key
+REDIS_ITEM_KEY=REDIS_ITEM_KEY
+# \u5546\u54C1\u4FE1\u606F\u5728redis\u4E2D\u7684\u8FC7\u671F\u65F6\u95F4,\u9ED8\u8BA4\u4E3A\u4E00\u5929 60*60*24
+REDIS_ITEM_EXPIRE=86400
