--- a/taotao-rest/pom.xml
+++ b/taotao-rest/pom.xml
@@ -12,8 +12,18 @@
     <dependencies>
         <dependency>
             <groupId>com.lujiahao</groupId>
+            <artifactId>taotao-common</artifactId>
+            <version>0.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.lujiahao</groupId>
             <artifactId>taotao-mapping</artifactId>
             <version>0.0.2</version>
+        </dependency>
+        <!-- 单元测试 -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
         </dependency>
         <!-- Spring -->
         <dependency>
@@ -64,11 +74,7 @@
             <groupId>org.apache.solr</groupId>
             <artifactId>solr-solrj</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.lujiahao</groupId>
-            <artifactId>taotao-common</artifactId>
-            <version>0.0.2</version>
-        </dependency>
+
     </dependencies>
     <build>
         <finalName>taotao-rest</finalName>
