商品内容分类完成

--- a/taotao-manager/src/main/resources/resource/resource.properties
+++ b/taotao-manager/src/main/resources/resource/resource.properties
@@ -16,4 +16,12 @@ IMAGE_BASE_URL=http://42.159.235.37/images
 
 # \u670D\u52A1\u5C42\u57FA\u7840url
 REST_BASE_URL=http://localhost:8081/rest
+#\u5185\u5BB9\u5206\u7C7B\u7BA1\u7406
+REST_CONTENT_CATEGORY_LIST=/content/category/list
+#\u5185\u5BB9\u5206\u7C7B\u7BA1\u7406-\u521B\u5EFA\u8282\u70B9
+REST_CONTENT_CATEGORY_CREATE=/content/category/create
+REST_CONTENT_CATEGORY_DELETE=/content/category/delete
+REST_CONTENT_CATEGORY_UPDATE=/content/category/update
+
+#\u9996\u9875\u5E7F\u544A\u4F4D\u8F6E\u64AD\u56FE\u540C\u6B65\u63A5\u53E3
 REST_CONTENT_SYNC_URL=/cache/sync/content/
