单点登录系统完成

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>taotao-mapping</module>
         <module>taotao-rest</module>
         <module>taotao-portal</module>
+        <module>taotao-sso</module>
     </modules>
     <packaging>pom</packaging>
 
