--- a/taotao-rest/src/main/resources/resource/db.properties
+++ b/taotao-rest/src/main/resources/resource/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.2.30:3306/taotao?characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3306/taotao?characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=1234
