--- a/taotao-rest/pom.xml
+++ b/taotao-rest/pom.xml
@@ -93,6 +93,14 @@
         </dependency>
         <!-- Swagger end -->
 
+        <!-- https://mvnrepository.com/artifact/net.sf.json-lib/json-lib -->
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>0.8</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <finalName>taotao-rest</finalName>
