--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>emall-rest</module>
         <module>emall-portal</module>
         <module>emall-sso</module>
+        <module>emall-order</module>
     </modules>
     <packaging>pom</packaging>
 
