--- a/emall-rest/src/main/resources/resource/db.properties
+++ b/emall-rest/src/main/resources/resource/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/taotao?characterEncoding=utf-8
+jdbc.url=jdbc:mysql://127.0.0.1:3306/taotao?characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=1234
+jdbc.password=123
