[emall-manager] 工程恢复

--- a/emall-manager/src/main/webapp/WEB-INF/web.xml
+++ b/emall-manager/src/main/webapp/WEB-INF/web.xml
@@ -3,8 +3,8 @@
          xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-         id="taotao" version="2.5">
-    <display-name>taotao-manager</display-name>
+         id="emall" version="2.5">
+    <display-name>emall-manager</display-name>
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
         <welcome-file>index.htm</welcome-file>
@@ -41,7 +41,7 @@
 
     <!-- springmvc的前端控制器 -->
     <servlet>
-        <servlet-name>taotao-manager</servlet-name>
+        <servlet-name>emall-manager</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <!-- contextConfigLocation不是必须的， 如果不配置contextConfigLocation，
         springmvc的配置文件默认在：WEB-INF/servlet的name+"-servlet.xml" -->
@@ -52,7 +52,7 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>taotao-manager</servlet-name>
+        <servlet-name>emall-manager</servlet-name>
         <!-- / 会拦截所有的静态资源,需要在springmvc.xml中添加静态资源的映射 -->
         <url-pattern>/</url-pattern>
     </servlet-mapping>
