--- a/emall-sso/pom.xml
+++ b/emall-sso/pom.xml
@@ -68,6 +68,12 @@
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
         </dependency>
+
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <finalName>emall-sso</finalName>
