[emall] 登录接口文档整理

--- a/emall-rest/src/main/webapp/WEB-INF/web.xml
+++ b/emall-rest/src/main/webapp/WEB-INF/web.xml
@@ -26,7 +26,7 @@
     <!-- Ajax Access-Control-Allow-Origin 跨域 拦截器解决方案 -->
     <filter>
         <filter-name>ACAOFilter</filter-name>
-        <filter-class>com.lujiahao.rest.filter.ACAOFilter</filter-class>
+        <filter-class>com.lujiahao.rest.filter.HeadersCORSFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>ACAOFilter</filter-name>
