[emall-auth] sso模块更改为auth认证模块,后期加入shiro权限管理

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <module>emall-mapping</module>
         <module>emall-rest</module>
         <module>emall-portal</module>
-        <module>emall-sso</module>
+        <module>emall-auth</module>
         <module>emall-mobile</module>
     </modules>
     <packaging>pom</packaging>
