[emall-auth] 创建auth授权模块,后续集成shiro

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>emall-portal</module>
         <module>emall-sso</module>
         <module>emall-mobile</module>
+        <module>emall-auth</module>
     </modules>
     <packaging>pom</packaging>
 
