[emall-sso] 用户表结构修改,忘记密码写了一半了

--- a/emall-sso/pom.xml
+++ b/emall-sso/pom.xml
@@ -80,6 +80,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <!--guava-->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <finalName>emall-sso</finalName>
