--- a/emall-mapping/pom.xml
+++ b/emall-mapping/pom.xml
@@ -42,35 +42,41 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
         </dependency>
+
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
-        <!--这个插件有问题,不知道是不是我不会用-->
-        <!--<plugins>-->
+        <plugins>
+            <!--这个插件有问题,不知道是不是我不会用-->
             <!--<plugin>-->
-                <!--&lt;!&ndash;用maven mybatis插件-->
-                <!--如果不在plugin里面添加依赖包得引用的话，会找不到相关得jar包，-->
-                <!--在plugin外部得jar包，他不会去找到并执行，-->
-                <!--所以要把plugin运行依赖得jar配置都放在里面&ndash;&gt;-->
-                <!--<groupId>org.mybatis.generator</groupId>-->
-                <!--<artifactId>mybatis-generator-maven-plugin</artifactId>-->
-                <!--<version>1.3.5</version>-->
-                <!--<configuration>-->
-                    <!--<verbose>true</verbose>-->
-                    <!--<overwrite>true</overwrite>-->
-                    <!--&lt;!&ndash;配置文件位置&ndash;&gt;-->
-                    <!--<configurationFile>src/main/resources/generatorConfig.xml</configurationFile>-->
-                <!--</configuration>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<id>Generate MyBatis Artifacts</id>-->
-                        <!--<goals>-->
-                            <!--<goal>generate</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
+            <!--&lt;!&ndash;用maven mybatis插件-->
+            <!--如果不在plugin里面添加依赖包得引用的话，会找不到相关得jar包，-->
+            <!--在plugin外部得jar包，他不会去找到并执行，-->
+            <!--所以要把plugin运行依赖得jar配置都放在里面&ndash;&gt;-->
+            <!--<groupId>org.mybatis.generator</groupId>-->
+            <!--<artifactId>mybatis-generator-maven-plugin</artifactId>-->
+            <!--<version>1.3.5</version>-->
+            <!--<configuration>-->
+            <!--<verbose>true</verbose>-->
+            <!--<overwrite>true</overwrite>-->
+            <!--&lt;!&ndash;配置文件位置&ndash;&gt;-->
+            <!--<configurationFile>src/main/resources/generatorConfig.xml</configurationFile>-->
+            <!--</configuration>-->
+            <!--<executions>-->
+            <!--<execution>-->
+            <!--<id>Generate MyBatis Artifacts</id>-->
+            <!--<goals>-->
+            <!--<goal>generate</goal>-->
+            <!--</goals>-->
+            <!--</execution>-->
+            <!--</executions>-->
             <!--</plugin>-->
-        <!--</plugins>-->
+        </plugins>
 
         <!-- 如果不添加此节点mybatis的mapper.xml文件都会被漏掉。 -->
         <resources>
@@ -83,7 +89,7 @@
                 <filtering>false</filtering>
             </resource>
             <!--<resource>-->
-                <!--<directory>src/main/resources</directory>-->
+            <!--<directory>src/main/resources</directory>-->
             <!--</resource>-->
         </resources>
     </build>
