--- a/emall-sso/src/main/webapp/WEB-INF/web.xml
+++ b/emall-sso/src/main/webapp/WEB-INF/web.xml
@@ -25,11 +25,11 @@
 
     <!-- Ajax Access-Control-Allow-Origin 跨域 拦截器解决方案 -->
     <filter>
-        <filter-name>ACAOFilter</filter-name>
+        <filter-name>HeadersCORSFilter</filter-name>
         <filter-class>com.lujiahao.sso.filter.HeadersCORSFilter</filter-class>
     </filter>
     <filter-mapping>
-        <filter-name>ACAOFilter</filter-name>
+        <filter-name>HeadersCORSFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
