--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>0.0.2</version>
     <modules>
         <module>emall-common</module>
-        <!--<module>emall-manager</module>-->
+        <module>emall-manager</module>
         <module>emall-mapping</module>
         <!--<module>emall-rest</module>-->
         <!--<module>emall-portal</module>-->
