--- a/emall-auth/pom.xml
+++ b/emall-auth/pom.xml
@@ -81,6 +81,14 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.7.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>emall-auth</finalName>
@@ -91,7 +99,7 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-                    <port>8085</port>
+                    <port>8089</port>
                     <path>/</path>
                 </configuration>
             </plugin>
