--- a/pom.xml
+++ b/pom.xml
@@ -9,20 +9,20 @@
     <version>0.0.2</version>
     <modules>
         <module>emall-common</module>
-        <module>emall-manager</module>
+        <!--<module>emall-manager</module>-->
         <module>emall-mapping</module>
         <!--<module>emall-rest</module>-->
         <!--<module>emall-portal</module>-->
         <module>emall-sso</module>
         <!--<module>emall-mobile</module>-->
-        <!--<module>emall-auth</module>-->
+        <module>emall-auth</module>
     </modules>
     <packaging>pom</packaging>
 
     <!-- 集中定义依赖版本号 -->
     <properties>
         <junit.version>4.12</junit.version>
-        <spring.version>4.1.3.RELEASE</spring.version>
+        <spring.version>4.2.4.RELEASE</spring.version>
         <mybatis.version>3.2.8</mybatis.version>
         <mybatis.spring.version>1.2.2</mybatis.spring.version>
         <mybatis.paginator.version>1.2.15</mybatis.paginator.version>
