--- a/emall-sso/pom.xml
+++ b/emall-sso/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.lujiahao</groupId>
-	<artifactId>emall-sso</artifactId>
+	<artifactId>sso</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
@@ -27,7 +27,7 @@
 	<dependencies>
         <dependency>
             <groupId>com.lujiahao</groupId>
-            <artifactId>emall-common</artifactId>
+            <artifactId>common</artifactId>
             <version>0.0.2</version>
         </dependency>
 
@@ -70,11 +70,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <version>1.5.9.RELEASE</version>
         </dependency>
 
         <!--guava-->
